--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,7 @@
-NEXT_PUBLIC_SANITY_TOKEN= SANITY_TOKEN
+NEXT_PUBLIC_SANITY_TOKEN=SANITY_TOKEN
 
-NEXT_PUBLIC_GOOGLE_API_TOKEN= GOOGLE_API_TOKEN
+NEXT_PUBLIC_GOOGLE_API_TOKEN=GOOGLE_API_TOKEN
 
 NEXT_PUBLIC_GOOGLE_API_SECRET=GOOGLE_API_SECRET
+
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
